# qmpo

./: .gitignore  Cargo.toml  LICENSE  README-ja.md  README.md  flake.nix
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD  qmpo-git.install
docs/: test-linux.html  test-macos.html  test-windows.html  test.html
nix/: home-manager.nix  package.nix
qmpo/: Cargo.toml
qmpo-core/: Cargo.toml
qmpo-core/src/: error.rs  lib.rs  uri.rs
qmpo-extension/: README-ja.md  README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  test.html
qmpo-lau/: Cargo.toml
qmpo-lau/src/: error.rs  linux.rs  macos.rs  main.rs  windows.rs
qmpo/src/: error.rs  log.rs  main.rs  uri.rs
scripts/: install.ps1  install.sh
