[package]
name = "qmpo-lau"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Registration tool for qmpo - Open Directory With Browser"

[dependencies]
qmpo-core = { path = "../qmpo-core" }
clap = { version = "4.5.54", default-features = false, features = ["std", "derive"] }
directories = "6.0.0"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.8.0"
