[package]
name = "qmpo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Directory URI handler - opens directories in file manager"

[dependencies]
qmpo-core = { path = "../qmpo-core" }
clap = { version = "4.5.54", default-features = false, features = ["std", "derive"] }
showfile = "0.1.1"
