[package]
name = "qmpo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open Directory With Browser - directory:// URI handler"

[dependencies]
qmpo-core = { path = "../qmpo-core" }
clap = { version = "4.5.54", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
