[package]
name = "qmpo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open Directory With Browser - directory:// URI handler"

[dependencies]
clap = { version = "4.5.54", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
url = { version = "2.5.8", default-features = false }
percent-encoding = "2.3.2"
thiserror = "2.0.18"
directories = "6.0.0"
